--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ footer_links:
 header_links:
   - title: Home
     url: /
+  - title: Team
+    url: /team
   - title: About
     url: /about
   - title: Services
