--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,14 +1,16 @@
 description: Imagine a world where you can get the highest quality PCBs at the most competitive prices - that's what we offer here at PCB Crew. Our factory-less approach to PCB design and manufacturing ensures that we are not limited to any one manufacturer. This allows us to source the best components from reliable suppliers and chooses the most suitable factory for each customer's design needs. Not only does this guarantee better quality, but it also cost savings that get passed on to you.
 members:
-  - name: Peter Van Eijk
+  - name: Bad Dummy Tux
     designation: CEO
     link:
-      title: LinkedIn
-      url: '#'
-    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magn...
-  - name: Sage Kirk
-    designation: CTO
+      title: Github
+      url: 'https://github.com/dumtux'
+    description: Linux Developer | Hardware Designer
+    image: team-1.jpg
+  - name: Bad Dummy Tux
+    designation: CEO
     link:
-      title: LinkedIn
-      url: '#'
-    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magn...
+      title: Github
+      url: 'https://github.com/dumtux'
+    description: Linux Developer | Hardware Designer
+    image: team-1.jpg
